--- a/index.html
+++ b/index.html
@@ -95,22 +95,21 @@
                 <div class="col-lg-12 my_skills">
                     
                     <div class="col-12 skills_text">
-                       <div> <h2>Мои навыки</h2>
+                       <div> <h2 class="header_skills">Мои навыки</h2>
                         <p class= "skills_small_text">Adobe photoshop</p>
-                    
                         <div class="row no-gutters">
-                        <img class="col-8 img_line" src="img/Rectangle 4.1.png" alt="Bootstrap">
-                        <img class="col-2 img_line" src="img/Rectangle 4.2.png" alt="Bootstrap">
+                        <img class="col-8 img_line" src="img/Rectangle_4.1.png" alt="Bootstrap">
+                        <img class="col-2 img_line" src="img/Rectangle_4.2.png" alt="Bootstrap">
                         </div>
                         <p class= "skills_small_text">Adobe photoshop</p>
                         <div class="row no-gutters">
-                            <img class="col-8 img_line" src="img/Rectangle 4.1.png" alt="Bootstrap">
-                            <img class="col-2 img_line" src="img/Rectangle 4.2.png" alt="Bootstrap">
+                            <img class="col-8 img_line" src="img/Rectangle_4.1.png" alt="Bootstrap">
+                            <img class="col-2 img_line" src="img/Rectangle_4.2.png" alt="Bootstrap">
                             </div>
                         <p class= "skills_small_text">Adobe photoshop</p> 
                         <div class="row no-gutters">
-                            <img class="col-8 img_line" src="img/Rectangle 4.1.png" alt="Bootstrap">
-                            <img class="col-2 img_line" src="img/Rectangle 4.2.png" alt="Bootstrap">
+                            <img class="col-8 img_line" src="img/Rectangle_4.1.png" alt="Bootstrap">
+                            <img class="col-2 img_line" src="img/Rectangle_4.2.png" alt="Bootstrap">
                             </div>
                     </div>
 
@@ -143,10 +142,10 @@
             <div class="row row_7">
             <div class="col-12 photo"> 
                 <div class="row no-gutters">
-            <img class="col-3 img_icons" src="img/rectangle 7.png" alt="Bootstrap"> 
-            <img class="col-3 img_laptop" src="img/Rectangle 7.1.png" alt="Bootstrap"> 
+            <img class="col-3 img_icons" src="img/rectangle_7.png" alt="Bootstrap"> 
+            <img class="col-3 img_laptop" src="img/Rectangle_7.1.png" alt="Bootstrap"> 
             <img class="col-1 offset-4 order-1 view_image" src="img/view.png" alt="Bootstrap"> 
-            <img class="col-3 img_icons" src="img/rectangle 7.png" alt="Bootstrap">
+            <img class="col-3 img_icons" src="img/rectangle_7.png" alt="Bootstrap">
             <img class="col-3 img_icons" src="img/laptop.png" alt="Bootstrap"> </div>
             </div>
          </div>
@@ -159,9 +158,9 @@
             <div class="col-12 photo"> 
                 <div class="row no-gutters">
             <img class="col-3 img_icons" src="img/laptop.png" alt="Bootstrap"> 
-            <img class="col-3 img_icons" src="img/rectangle 7.png" alt="Bootstrap"> 
+            <img class="col-3 img_icons" src="img/rectangle_7.png" alt="Bootstrap"> 
             <img class="col-3 img_icons" src="img/laptop.png" alt="Bootstrap"> 
-            <img class="col-3 img_icons" src="img/rectangle 7.png" alt="Bootstrap"></div>
+            <img class="col-3 img_icons" src="img/rectangle_7.png" alt="Bootstrap"></div>
             </div>
          </div>
         </div>
