--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <form>
                     <div class="form-row">
                         <div class="form-group col-3">
-                            <input type="name" class="form-control" id="inputName" placeholder="Ваше имя">
+                            <input type="text" class="form-control" id="inputName" placeholder="Ваше имя">
                         </div>
                       <div class="form-group col-3">
                         <input type="email" class="form-control" id="inputEmail4" placeholder="Ваш Email">
