--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             </div>
                     </div>
 
-                      <div class="col-4 face"> <img src="img/face.png" height="450px" width="555px" alt="Bootstrap"> </div> 
+                      <div class="col-4"> <img class="face" src="img/face.png"  alt="Bootstrap"> </div> 
     
                  </div>   
                </div>  
@@ -133,7 +133,7 @@
             <div class="row row_7">
                 <div class="col-12 video">
                     <div class="col-lg-12 offset-lg-1 embed-responsive embed-responsive-16by9">
-                        <iframe height="600px" class="embed-responsive-item" src="https://www.youtube.com/embed/gnVYWcavOXs" allowfullscreen></iframe>
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/gnVYWcavOXs" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
