update index img_links

--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
             <div class="row row_7">
             <div class="col-12 photo"> 
                 <div class="row no-gutters">
-            <img class="col-3 img_icons" src="img/rectangle_7.png" alt="Bootstrap"> 
+            <img class="col-3 img_icons" src="img/Rectangle_7.png" alt="Bootstrap"> 
             <img class="col-3 img_laptop" src="img/Rectangle_7.1.png" alt="Bootstrap"> 
-                <img class="col-3 img_icons" src="img/rectangle_7.png" alt="Bootstrap">
+                <img class="col-3 img_icons" src="img/Rectangle_7.png" alt="Bootstrap">
             <img class="col-3 img_icons" src="img/laptop.png" alt="Bootstrap"> </div>
             </div>
          </div>
@@ -157,9 +157,9 @@
             <div class="col-12 photo"> 
                 <div class="row no-gutters">
             <img class="col-3 img_icons" src="img/laptop.png" alt="Bootstrap"> 
-            <img class="col-3 img_icons" src="img/rectangle_7.png" alt="Bootstrap"> 
+            <img class="col-3 img_icons" src="img/Rectangle_7.png" alt="Bootstrap"> 
             <img class="col-3 img_icons" src="img/laptop.png" alt="Bootstrap"> 
-            <img class="col-3 img_icons" src="img/rectangle_7.png" alt="Bootstrap"></div>
+            <img class="col-3 img_icons" src="img/Rectangle_7.png" alt="Bootstrap"></div>
             </div>
          </div>
         </div>
